--- a/app/src/main/res/layout/note_elem_link.xml
+++ b/app/src/main/res/layout/note_elem_link.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content" >
 
                 <EditText
-                    android:id="@+id/link"
+                    android:id="@+id/tvTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
