--- a/app/src/main/res/layout/note_elem_note.xml
+++ b/app/src/main/res/layout/note_elem_note.xml
@@ -32,7 +32,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_weight="1"
-                
                     android:padding="10dp"
                     android:text="@string/tvNote"
                     android:textColor="#000000"
@@ -50,7 +49,7 @@
 
             </LinearLayout>
 
-            <Space
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
