--- a/app/src/main/res/menu/note.xml
+++ b/app/src/main/res/menu/note.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app ="http://schemas.android.com/apk/res-auto"
+        >
 
     <!--
          <main_list_item
@@ -12,13 +14,13 @@
         android:id="@+id/action_share"
         android:icon="@drawable/ic_action_share"
         android:orderInCategory="100"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/action_share"/>
      
-    <item
+    <!--<item
         android:id="@+id/btnAdd"
         android:icon="@drawable/ic_action_new_attachment"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/add_element">
         <menu>
             <item
@@ -39,12 +41,12 @@
                 android:icon="@drawable/ic_action_play"
                 android:title="@string/new_audio"/>
         </menu>
-    </item>
+    </item>-->
     <item
         android:id="@+id/save"
         android:layout_gravity="left"
         android:icon="@android:drawable/ic_menu_save"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/save">
     </item>
 
