--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/mainLayout"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
@@ -16,11 +15,13 @@
                 android:id="@+id/rv_main"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:dividerHeight="10dp"/>
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:scrollbars="vertical"/>
             <android.support.design.widget.FloatingActionButton
                     android:id="@+id/fab"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
                     android:layout_gravity="bottom|end"
                     style="@style/FabStyle"
 
