--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -4,23 +4,41 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical"
+
         >
 
     <include layout="@layout/toolbar"/>
+    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
+        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
+                android:fillViewport="true">
+        <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent"
+                   android:id="@+id/iv_BackGround"
+                   android:scaleType="fitXY"/>
+        </ScrollView>
+        <ScrollView
+                android:id="@+id/scrollView1"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                >
 
-    <ScrollView
-        android:id="@+id/scrollView1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+            <LinearLayout
+                    android:id="@+id/noteList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+            </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/noteList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layoutMode="opticalBounds"
-            android:orientation="vertical" >
-        </LinearLayout>
+        </ScrollView>
 
-    </ScrollView>
+        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_gravity="bottom|end"
+                style="@style/FabStyle"
+
+                />
+
+    </FrameLayout>
 
 </LinearLayout>
