--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:src">@drawable/ic_add_white_24dp</item>
-   <!--     <item name="android:scaleType">centerInside</item>-->
+        <!--     <item name="android:scaleType">centerInside</item>-->
         <item name="borderWidth">0dp</item>
         <item name="elevation">6dp</item>
         <item name="pressedTranslationZ">12dp</item>
@@ -36,4 +36,15 @@
         <item name="android:dropDownVerticalOffset">50dp</item>
     </style>
 
+
+    <style name="DialogStyle">
+        <item name="android:windowBackground">@color/dialog_frame_background</item>
+        <item name="android:colorBackground">@null</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+    </style>
 </resources>
