--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,7 +31,7 @@
         <item name="android:layout_margin">16dp</item>
         <item name="rippleColor">@android:color/white</item>
     </style>
-    <style name="spinner_style">
+    <style name="spinner_style" parent="Base.Widget.AppCompat.DropDownItem.Spinner">
         <item name="android:popupBackground">#00000000</item>
         <item name="android:dropDownVerticalOffset">50dp</item>
     </style>
@@ -46,5 +46,15 @@
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
         <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
+    </style>
+
+    <style name="AddDialogEditTextSytle">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textStyle">bold</item>
+
+
+
+
     </style>
 </resources>
