--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-      <dimen name="popup_width">300dp</dimen>
-          <dimen name="popup_height">270dp</dimen>
+    <dimen name="popup_width">300dp</dimen>
+    <dimen name="popup_height">270dp</dimen>
+
+    <dimen name="add_dialog_content_padding">75dp</dimen>
+
+
+
 </resources>
