--- a/app/src/main/res/layout/content_container.xml
+++ b/app/src/main/res/layout/content_container.xml
@@ -3,4 +3,5 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+             android:minHeight="50dp"
         android:id="@+id/continer"/>
