--- a/app/src/main/res/layout/dialog_add.xml
+++ b/app/src/main/res/layout/dialog_add.xml
@@ -2,10 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="350dp"
-
+              android:layout_height="300dp"
         >
-
 
     <TextView
             android:layout_width="match_parent"
@@ -14,21 +12,21 @@
             style="@style/AddDialogEditTextSytle"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
-            android:paddingLeft="@dimen/add_dialog_content_padding"
-            android:paddingRight="@dimen/add_dialog_content_padding"
-            android:textSize="32dp"
+            android:paddingLeft="30dp"
+            android:textSize="30sp"
             />
 
     <View android:layout_width="wrap_content" android:layout_height="1dp"
-            android:background="#fff"/>
+          android:background="#fff"
+     />
     <android.support.v7.widget.RecyclerView
-            android:paddingLeft="@dimen/add_dialog_content_padding"
-            android:paddingRight="@dimen/add_dialog_content_padding"
+            android:layout_gravity="center_horizontal"
+            android:paddingLeft="30dp"
             android:paddingBottom="15dp"
             android:paddingTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_width="wrap_content"
+            android:layout_height="300dp"
             android:id="@+id/lv_addDialog_list"
-             android:overScrollMode="never"
+            android:overScrollMode="never"
             />
 </LinearLayout>
