--- a/app/src/main/res/layout/note_elem_link.xml
+++ b/app/src/main/res/layout/note_elem_link.xml
@@ -26,7 +26,7 @@
                 android:layout_weight="1" >
 
                 <TextView
-                    android:id="@+id/songTitle"
+                    android:id="@+id/tvTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -54,14 +54,17 @@
                 android:layout_height="wrap_content" >
 
                 <EditText
-                    android:id="@+id/tvTitle"
+                    android:id="@+id/etText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:autoLink="web"
                     android:inputType="textNoSuggestions"
-                    android:padding="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="20dp"
                     android:selectAllOnFocus="false"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
