--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,7 +50,7 @@
 
     <style name="AddDialogEditTextSytle">
         <item name="android:textColor">#fff</item>
-        <item name="android:textSize">30dp</item>
+        <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
 
 
