--- a/app/src/main/res/layout/note_elem_audio.xml
+++ b/app/src/main/res/layout/note_elem_audio.xml
@@ -142,14 +142,14 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
-                                android:clickable="true" />
+                                android:clickable="true" android:visibility="visible"/>
 
                             <ImageView
                                 android:id="@+id/btnRepeat"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
-                                android:clickable="true" />
+                                android:clickable="true" android:visibility="visible"/>
                         </LinearLayout>
                     </LinearLayout>
 
