--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="wrap_content"
-                                   android:background="@color/primary_dark"
-                                   android:elevation="4dp"
-                                   android:id="@+id/toolbar"
+    android:id="@+id/toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/primary_dark"
+    android:elevation="4dp">
 
-        >
     <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             android:id="@+id/spinner"
-             style="@style/spinner_style"/>
+        android:id="@+id/spinner"
+        style="@style/spinner_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
 </android.support.v7.widget.Toolbar>
