--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,34 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.deathnote.MainActivity" >
- 
+    tools:context="com.example.deathnote.MainActivity">
+
     <item
         android:id="@+id/menu_settings"
-         android:icon="@drawable/ic_action_overflow" 
+        android:icon="@drawable/ic_action_overflow"
         android:orderInCategory="100"
-        android:showAsAction="always"
-        android:title="@string/action_settings">
+        android:title="@string/action_settings"
+        app:showAsAction="ifRoom">
         <menu>
-           
-    
             <item
                 android:id="@+id/action_about"
-                 
-                android:title="@string/action_about"/>
-          
-       
+                android:title="@string/action_about" />
         </menu>
-        
-        
-        
     </item>
     <item
-   
         android:id="@+id/add"
         android:layout_gravity="left"
         android:icon="@android:drawable/ic_menu_add"
-        android:showAsAction="always"
-        android:title="@string/add">
-    </item>
+        android:title="@string/add"
+        app:showAsAction="ifRoom" />
 
 </menu>
