--- a/app/src/main/res/layout/note_elem_audio.xml
+++ b/app/src/main/res/layout/note_elem_audio.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -12,30 +12,33 @@
         android:layout_gravity="center_horizontal"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingTop="20dp" >
+        android:paddingTop="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/list_item_shape"
             android:gravity="center_horizontal"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
                 android:layout_marginTop="3dp"
-                android:layout_weight="1" >
+                android:layout_weight="1">
 
-                <ImageView android:id="@+id/btnRecord"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:layout_gravity="center_vertical|center_horizontal" android:layout_margin="7dp"
-                           android:clickable="true"
-                           android:padding="7dp"
-                           android:background="@drawable/ic_action_rec"
-                           android:visibility="gone"/>
+                <ImageView
+                    android:id="@+id/btnRecord"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_margin="7dp"
+                    android:background="@drawable/ic_action_rec"
+                    android:clickable="true"
+                    android:padding="7dp"
+                    android:visibility="gone" />
+
                 <ImageView
                     android:id="@+id/btnPlay"
                     android:layout_width="wrap_content"
@@ -43,7 +46,8 @@
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_margin="7dp"
                     android:clickable="true"
-                    android:padding="7dp" android:visibility="gone"/>
+                    android:padding="7dp"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/songTitle"
@@ -79,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/songTime"
@@ -102,13 +106,13 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal" >
+                    android:layout_gravity="center_horizontal">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
-                        android:padding="7dp" >
+                        android:padding="7dp">
 
                         <ImageView
                             android:id="@+id/btnPrev"
@@ -135,21 +139,23 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="30dp"
-                            android:layout_marginTop="1dp" >
+                            android:layout_marginTop="1dp">
 
                             <ImageView
                                 android:id="@+id/btnShuffle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
-                                android:clickable="true" android:visibility="visible"/>
+                                android:clickable="true"
+                                android:visibility="visible" />
 
                             <ImageView
                                 android:id="@+id/btnRepeat"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
-                                android:clickable="true" android:visibility="visible"/>
+                                android:clickable="true"
+                                android:visibility="visible" />
                         </LinearLayout>
                     </LinearLayout>
 
