--- a/app/src/main/res/menu/note.xml
+++ b/app/src/main/res/menu/note.xml
@@ -1,53 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app ="http://schemas.android.com/apk/res-auto"
-        >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--
-         <main_list_item
-        andrnoteIdd:idnoteId@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-    -->
     <item
         android:id="@+id/action_share"
         android:icon="@drawable/ic_action_share"
         android:orderInCategory="100"
-        app:showAsAction="always"
-        android:title="@string/action_share"/>
-     
-    <!--<item
-        andrnoteIdd:idnoteId@+id/btnAdd"
-        android:icon="@drawable/ic_action_new_attachment"
-        app:showAsAction="always"
-        android:title="@string/add_element">
-        <menu>
-            <item
-                andrnoteIdd:idnoteId@+id/addText"
-                android:icon="@drawable/ic_action_edit"
-                android:title="@string/new_text"/>
-             <item
-                andrnoteIdd:idnoteId@+id/addLink"
-                android:icon="@drawable/ic_action_directions"
-                android:title="@string/new_link"/>
-            <item
-                andrnoteIdd:idnoteId@+id/addPic"
-                android:icon="@drawable/ic_action_camera"
-                android:title="@string/new_pic"/>
- 
-            <item
-                andrnoteIdd:idnoteId@+id/addAudio"
-                android:icon="@drawable/ic_action_play"
-                android:title="@string/new_audio"/>
-        </menu>
-    </item>-->
+        android:title="@string/action_share"
+        app:showAsAction="always" />
+
     <item
+        android:visible="false"
         android:id="@+id/save"
         android:layout_gravity="left"
         android:icon="@android:drawable/ic_menu_save"
-        app:showAsAction="always"
-        android:title="@string/save">
-    </item>
+        android:title="@string/save"
+        app:showAsAction="ifRoom" />
 
 </menu>
