--- a/app/src/main/res/layout/note_elem_pic.xml
+++ b/app/src/main/res/layout/note_elem_pic.xml
@@ -4,31 +4,34 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <FrameLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp" >
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="20dp">
 
         <LinearLayout
             android:id="@+id/picLayout"
-            android:layout_width="270dp"
+            android:layout_width="match_parent"
             android:layout_height="270dp"
-            android:orientation="vertical" >
+            android:background="@drawable/list_item_shape"
+            android:orientation="vertical">
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/del"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:padding="4sp"
                     android:clickable="true"
+                    android:padding="4sp"
                     android:src="@drawable/del_btn" />
 
             </FrameLayout>
