--- a/app/src/main/res/layout/dialog_add.xml
+++ b/app/src/main/res/layout/dialog_add.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="300dp"
-        >
+    android:layout_width="match_parent"
+    android:layout_height="300dp"
+    android:orientation="vertical">
 
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_addDialog_title"
-            style="@style/AddDialogEditTextSytle"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingLeft="30dp"
-            android:textSize="30sp"
-            />
+        android:id="@+id/tv_addDialog_title"
+        style="@style/AddDialogEditTextSytle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:textSize="30sp" />
 
-    <View android:layout_width="wrap_content" android:layout_height="1dp"
-          android:background="#fff"
-     />
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="#fff" />
+
     <android.support.v7.widget.RecyclerView
-            android:layout_gravity="center_horizontal"
-            android:paddingLeft="30dp"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
-            android:id="@+id/lv_addDialog_list"
-            android:overScrollMode="never"
-            />
+        android:id="@+id/lv_addDialog_list"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:overScrollMode="never"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp" />
 </LinearLayout>
