Add link loader ui

--- a/app/src/main/res/layout/link_content.xml
+++ b/app/src/main/res/layout/link_content.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:orientation="horizontal"
-    android:weightSum="3">
+    tools:orientation="horizontal"
+    tools:parentTag="android.widget.LinearLayout"
+    tools:weightSum="3">
 
     <ImageView
         android:id="@+id/image_post"
-        android:layout_width="0dip"
+        android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_weight="1"
         android:scaleType="centerCrop" />
@@ -51,4 +51,4 @@
             android:textSize="16sp"
             tools:text="text" />
     </LinearLayout>
-</LinearLayout>
+</merge>
