--- a/app/src/main/res/layout/note_elem_audio_record.xml
+++ b/app/src/main/res/layout/note_elem_audio_record.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
-    android:layout_marginTop="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:background="@drawable/list_item_shape"
     android:orientation="horizontal">
 
