--- a/app/src/main/res/layout/note_elem_link.xml
+++ b/app/src/main/res/layout/note_elem_link.xml
@@ -12,7 +12,9 @@
         android:layout_gravity="center_horizontal"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingTop="20dp" >
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +49,7 @@
 
             </LinearLayout>
 
- 
+
 
             <LinearLayout
                 android:layout_width="match_parent"
