--- a/app/src/main/res/layout/note_elem_title.xml
+++ b/app/src/main/res/layout/note_elem_title.xml
@@ -12,7 +12,9 @@
         android:layout_gravity="center_horizontal"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:paddingTop="20dp" >
+        android:paddingTop="20dp"
+        android:paddingBottom="10dp"
+        >
         <ImageView
                 android:id="@+id/del"
                 android:layout_width="wrap_content"
