--- a/app/src/main/res/layout/note_elem_link.xml
+++ b/app/src/main/res/layout/note_elem_link.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
@@ -68,7 +68,7 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="?selectableItemBackground"
-            android:visibility="visible"
+            android:visibility="gone"
             tools:visibility="visible" />
     </LinearLayout>
 
