--- a/app/src/main/res/layout/note_elem_note.xml
+++ b/app/src/main/res/layout/note_elem_note.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
     android:paddingBottom="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:paddingTop="10dp">
 
     <LinearLayout
@@ -47,18 +47,16 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:autoLink="web"
-            android:inputType="text"
+            android:autoLink="all"
+            android:inputType="textMultiLine|textNoSuggestions"
             android:paddingBottom="20dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="10dp"
-            android:selectAllOnFocus="false"
             android:textColor="#000000"
             android:textColorHint="#000000"
             android:textColorLink="@color/link"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
